# Blastroids

./: .gitignore  README.md  pyproject.toml
OneDrive/Documents/projects/blastroids/: Untitled-1.py  main.py
conductor/tracks/refactor-complexity/: plan.md
src/blastroids/: __main__.py  collisions.py  config.py  effects.py  entities.py  main.py  ui.py  upgrades.py
