[tool.poetry]
name = "blastroids"
version = "0.1.0"
description = ""
authors = ["RockBreaker"]
packages = [{include = "blastroids", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
pygame = "^2.1.2"
radon = "^6.0.1"
ruff = "^0.15.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blastroids = "blastroids.main:main"
